# j2s2

./: .gitignore  .gitmessage.txt  README.md  diary_database.sql  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/routers/: auth.py  bookmark.py  diary.py  diary_bookmark.py  health.py  me.py  pages.py  question.py  quote.py  quotes.py  saying.py  users.py
app/core/: config.py  deps.py  jwt.py  security.py
app/db/: database.py  session.py
app/models/: bookmark.py  diary.py  diary_bookmark.py  question.py  quote.py  saying.py  user.py
app/repositories/: bookmark_repo.py  diary_bookmark.py  diary_repo.py  health_repo.py  question_repo.py
app/schemas/: auth.py  bookmark.py  diary.py  diary_bookmark.py  health.py  quote.py  saying.py  user.py
app/services/: health_service.py  quote_service.py  scrape_service.py  scraper.py
app/static/css/: login.css  userAdd.css
app/static/js/: bgm.js  login.js  userAdd.js
app/templates/: login.html  userAdd.html
migrations/models/: 0_20260120183040_init.py  1_20260120185504_update.py  2_20260121153902_None.py  3_20260121154221_update.py  4_20260121180835_None.py  5_20260122140542_update.py  6_20260122153650_update.py  6_20260122182404_None.py
