[project]
name = "j2s2-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "aerich>=0.9.2",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
prod = [
    "aiomysql>=0.3.2",
    "fastapi>=0.128.0",
    "tortoise-orm>=0.25.3",
    "uvicorn>=0.40.0",
]
