[project]
name = "j2s2-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncmy>=0.2.11",
    "cryptography>=46.0.3",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "tomli-w>=1.2.0",
    "tomlkit>=0.14.0",
    "tortoise-orm>=0.25.3",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "aerich>=0.9.2",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
prod = [
    "aiomysql>=0.3.2",
    "fastapi>=0.128.0",
    "pydantic==2.12.0",
    "pydantic-settings>=2.12.0",
    "tortoise-orm>=0.25.3",
    "uvicorn>=0.40.0",
]

[tool.aerich]
tortoise_orm = "app.db.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
